@@ -61,6 +61,8 @@ tabs, and some issue with @code{move-resize} tabs. [fuchur]
 @itemize @minus
 @item In tabbed-windowing it is now possible to add a whole tab-group to another tab-group, or a
 single window. By default the keybinding is @code{C-Button2-Off}. [fuchur]
+
+@item Tabs now support @code{viewport-sticky} and @code{workspace-sticky}. [fuchur]
 @end itemize
 @item Miscellaneous Changes
 @itemize @minus
