@@ -1,3 +1,7 @@
+2012-08-30  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/tabs/tabgroup.jl: support for sticky-workspace and
+	sticky-viewport in tabs. [fuchur]
+
 2012-08-29  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: remember default cursor [fuchur]
 
